gitops/apps/opencloud/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: opencloud
  labels:
    name: opencloud
